--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -191,9 +191,7 @@
                             <div class="text-center my-5">
                                 <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
                                 <p class="lead fw-light mb-4">My name is A'Yanna Rouse.</p>
-                                <p class="text-muted"> I discovered my passion for coding in high school, where I developed projects like a mini app for learning the Korean alphabet and websites focused on topics such as Autism Awareness and engaging, Buzzfeed-style content. These early experiences sparked my curiosity about the innovative power of technology and inspired me to pursue a dual major in Computer Science and African American & Black Diaspora Studies. My interdisciplinary education allows me to explore the intersection of technology, culture, and community impact. </p>
-                                <p class="text-muted"> In college, I have actively contributed to both on-campus and off-campus communities through my involvement with organizations like MLT, ColorStack, RTC, Reboot Representation, CodePath, Apple, and Microsoft. At Boston University, I am a proud member of the NSBE and GWC chapters and serve on the Internal Affairs Committee of the CAS Student Government. My global perspective expanded further during the Spring 2024 semester when I studied abroad in Dublin, Ireland, as part of a STEM-focused program, immersing myself in Irish culture and studying at one of Ireland's esteemed institutions. </p>
-                                <p class="text-muted"> Professionally, I am passionate about IT, AI, Fullstack and Frontend SWE, Data Science, and Cybersecurity. I am eager to leverage my skills and experiences to drive innovation and create meaningful impact. As I prepare to graduate in May 2025, I am actively seeking full-time opportunities to bring my unique perspective and expertise to the tech industry. </p>
+                                <p class="text-muted"> I am from Brooklyn, NY. I am a senior at Boston University's College of Arts and Sciences, majoring in Computer Science & African American and Black Diaspora Studies. I actively engage in both on-campus and off-campus communities through my involvement in organizations like MLT, ColorStack, RTC, Reboot Representation, and Apple. Within BU, I am a member of the NSBE and GWC chapters, and I serve on the Internal Affairs Committee of the CAS Student Government. During the Spring 2024 semester, I studied abroad in Dublin, Ireland, participating in a STEM-focused program. My professional interests lie in IT, SWE, Data Science, and Cybersecurity.</p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
                                     <a class="text-gradient" href="mailto:yanni620@bu.edu"><i class="bi bi-envelope"></i></a>
                                     <a class="text-gradient" href="https://www.linkedin.com/in/ayannarouse/"><i class="bi bi-linkedin"></i></a>
@@ -211,7 +209,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="bix-footer-contact">
-                            <p> Copyright &copy; 2025 A'Yanna Rouse. All Rights Reserved.</p>
+                            <p> Copyright &copy; 2024 A'Yanna Rouse. All Rights Reserved.</p>
                         <div class="logo-links">
                             <a class="text-gradient" href="mailto:yanni620@bu.edu"><i class="bi bi-envelope"></i></a>
                             <a class="text-gradient" href="https://www.linkedin.com/in/ayannarouse/"><i class="bi bi-linkedin"></i></a>
