--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <div class="col-xxl-5">
                             <!-- Header text content-->
                             <div class="text-center text-xxl-start">
-                                <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">Computer Science &middot; Software Development &middot; Cybersecurity</div></div>
+                                <div class="badge bg-gradient-primary-to-secondary text-white mb-4"><div class="text-uppercase">Computer Science &middot; IT &middot; Cybersecurity</div></div>
                                 <div class="fs-3 fw-light text-muted">This is</div>
                                 <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">A'Yanna Rouse's Portfolio</span></h1>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
@@ -195,7 +195,7 @@
                                 <p class="text-muted"> In college, I have actively contributed to both on-campus and off-campus communities through my involvement with organizations like MLT, ColorStack, RTC, Reboot Representation, CodePath, Apple, and Microsoft. At Boston University, I am a proud member of the NSBE and GWC chapters and serve on the Internal Affairs Committee of the CAS Student Government. My global perspective expanded further during the Spring 2024 semester when I studied abroad in Dublin, Ireland, as part of a STEM-focused program, immersing myself in Irish culture and studying at one of Ireland's esteemed institutions. </p>
                                 <p class="text-muted"> Professionally, I am passionate about IT, AI, Fullstack and Frontend SWE, Data Science, and Cybersecurity. I am eager to leverage my skills and experiences to drive innovation and create meaningful impact. As I prepare to graduate in May 2025, I am actively seeking full-time opportunities to bring my unique perspective and expertise to the tech industry. </p>
                                 <div class="d-flex justify-content-center fs-2 gap-4">
-                                    <a class="text-gradient" href="mailto:yanni620@bu.edu"><i class="bi bi-envelope"></i></a>
+                                    <a class="text-gradient" href="mailto:ayannaurouse@gmail.com"><i class="bi bi-envelope"></i></a>
                                     <a class="text-gradient" href="https://www.linkedin.com/in/ayannarouse/"><i class="bi bi-linkedin"></i></a>
                                     <a class="text-gradient" href="https://github.com/a-yannarouse"><i class="bi bi-github"></i></a>
                                 </div>
@@ -213,7 +213,7 @@
                         <div class="bix-footer-contact">
                             <p> Copyright &copy; 2025 A'Yanna Rouse. All Rights Reserved.</p>
                         <div class="logo-links">
-                            <a class="text-gradient" href="mailto:yanni620@bu.edu"><i class="bi bi-envelope"></i></a>
+                            <a class="text-gradient" href="mailto:ayannaurouse@gmail.com"><i class="bi bi-envelope"></i></a>
                             <a class="text-gradient" href="https://www.linkedin.com/in/ayannarouse/"><i class="bi bi-linkedin"></i></a>
                             <a class="text-gradient" href="https://github.com/a-yannarouse"><i class="bi bi-github"></i></a>
                         </div>
