--- a/projects.html
+++ b/projects.html
@@ -167,7 +167,6 @@
                             <h2 class="fw-bolder">Travel Memory Journal</h2>
                             <p>This is a collaborative group class project. The Travel Memory Journal is an interactive platform designed for travelers to document and revisit their journeys. This digital journal allows users to record details of their trips, including the cities they visited, travel dates, and personal trip descriptions.</p>
                             <a href="https://github.com/a-yannarouse/Time_Memory_Journal" class="btn btn-primary" target="_blank">Github</a>
-                            <a href="https://drive.google.com/file/d/1stC3fcyj8kNFbZStK31kV6UU_Bs7T8JS/view?usp=sharing" class="btn btn-primary" target="_blank">Video Description</a>
                         </div>
                         <!-- Project Item 7-->
                         <div class="project-item">
@@ -187,21 +186,21 @@
                             <h2 class="fw-bolder">Personality Quiz</h2>
                             <p>One of my GirlsWhoCode projects was building a Buzzfeed-style personality quiz to find out which Goblin (tv show) character you are, where users click on buttons to select their answers to questions and, at the end, receive a message about themselves.</p>
                             <a href="https://github.com/a-yannarouse/which-goblin-character-are-you" class="btn btn-primary" target="_blank">Github</a>
-                            <a href="https://which-goblin-character-are-you.glitch.me/" class="btn btn-primary" target="_blank">Start the Quiz!</a>
+                            <a href="https://personalityquiz-goblin.vercel.app/" class="btn btn-primary" target="_blank">Start the Quiz!</a>
                         </div>
                         <!-- Project Item 4-->
                         <div class="project-item">
                             <h2 class="fw-bolder">Personal Website</h2>
                             <p>My first project for GirlsWhoCode was making a personal website I can use during and after the program. It has my bio, projects, and blogs that I did during the program!</p>
                             <a href="https://github.com/a-yannarouse/Personal-website" class="btn btn-primary" target="_blank">Github</a>
-                            <a href="https://yanni-website.glitch.me/" class="btn btn-primary" target="_blank">Check it Out!</a>
+                            <a href="https://gwc-personal-website.vercel.app/" class="btn btn-primary" target="_blank">Check it Out!</a>
                         </div>
                         <!-- Project Item 3-->
                         <div class="project-item">
                             <h2 class="fw-bolder">Activist Toolkit: Autism Awareness</h2>
                             <p>For my final project for GirlsWhoCode, I created an activist website to take action for autism awareness! I used all the knowledge I knew from the program to create the website.</p>
                             <a href="https://github.com/a-yannarouse/Learn-Autism-Awareness" class="btn btn-primary" target="_blank">Github</a>
-                            <a href="https://learn-autism-awareness.glitch.me/index.html" class="btn btn-primary" target="_blank">Check it Out!</a>
+                            <a href="https://learn-autism-awareness.vercel.app/" class="btn btn-primary" target="_blank">Check it Out!</a>
                         </div>
                         <!-- Project Item 2-->
                         <div class="project-item">
@@ -223,7 +222,7 @@
                 <div class="container px-5 my-5">
                     <div class="text-center">
                         <h2 class="display-4 fw-bolder mb-4">Let's build something together</h2>
-                        <a class="btn btn-outline-light btn-lg px-5 py-3 fs-6 fw-bolder" href="mailto:yanni620@bu.edu">Contact me</a>
+                        <a class="btn btn-outline-light btn-lg px-5 py-3 fs-6 fw-bolder" href="mailto:ayannaurouse@gmail.com">Contact me</a>
                     </div>
                 </div>
             </section>
@@ -233,7 +232,7 @@
             <div class="container">
                 <p>Copyright &copy; 2025 A'Yanna Rouse. All Rights Reserved.</p>
                 <div class="logo-links">
-                    <a href="mailto:yanni620@bu.edu"><i class="bi bi-envelope"></i></a>
+                    <a href="mailto:ayannaurouse@gmail.com"><i class="bi bi-envelope"></i></a>
                     <a href="https://www.linkedin.com/in/ayannarouse/"><i class="bi bi-linkedin"></i></a>
                     <a href="https://github.com/a-yannarouse"><i class="bi bi-github"></i></a>
                 </div>
