--- a/resume.html
+++ b/resume.html
@@ -574,7 +574,7 @@
                         <div class="bix-footer-contact">
                             <p> Copyright &copy; 2025 A'Yanna Rouse. All Rights Reserved.</p>
                         <div class="logo-links">
-                            <a class="text-gradient" href="mailto:yanni620@bu.edu"><i class="bi bi-envelope"></i></a>
+                            <a class="text-gradient" href="mailto:ayannaurouse@gmail.com"><i class="bi bi-envelope"></i></a>
                             <a class="text-gradient" href="https://www.linkedin.com/in/ayannarouse/"><i class="bi bi-linkedin"></i></a>
                             <a class="text-gradient" href="https://github.com/a-yannarouse"><i class="bi bi-github"></i></a>
                         </div>
