Update Resume page

--- a/resume.html
+++ b/resume.html
@@ -76,9 +76,9 @@
                                             <ul>
                                                 <li>Provided Tier 1 support for Microsoft 365 tools (Outlook, SharePoint Online, OneDrive, Teams) using Autotask.</li>
                                                 <br>
-                                                <li>Managed user accounts, licenses, password resets, and permissions in the Microsoft 365 Admin Center.</li>
+                                                <li>Managed user accounts and permissions via the Microsoft 365 Admin Center, streamlining resolution for 50+ tickets.</li>
                                                 <br>
-                                                <li>Documented common issues and solutions, and escalated complex problems to Tier 2, improving ticket workflow.</li>
+                                                <li>Built an equipment checkout tool integrating SharePoint lists, Power Automate, and Power Apps to automate tracking.</li>
                                             </ul> 
                                         </div></div>
                                     </div>
